Dump topics-and-qrels (#2097)
* dump topics-and-qrels

* apply comments

* apply comments 2